# radar-rgb-fusion

./: .gitignore  LICENSE  README.md  default.repos  enter.sh  run.sh
.devcontainer/: .build.sh.swp  Dockerfile  build.sh  devcontainer.json  entrypoint
rviz/: nuscenes.config.rviz
src/launch/devel_launch/: CMakeLists.txt  package.xml
src/launch/devel_launch/launch/: devel_launch.launch.py  radar_transform.launch.py
src/launch/devel_launch/rviz/: devel.rviz  local.rviz  nuscenes.rviz
src/perception/street_obj_detector/: .gitignore  package.xml
src/perception/street_obj_detector/launch/: street_obj_detector.launch.py
src/perception/street_obj_detector/param/: defaults.param.yaml
src/perception/street_obj_detector/street_obj_detector/: street_obj_detector.py  street_obj_detector_node.py
src/perception/street_obj_detector/test/: test_params.py
src/point_matching/projected_radar_msgs/: CMakeLists.txt  package.xml
src/point_matching/projected_radar_msgs/msg/: ProjectedRadar.msg  ProjectedRadarArray.msg  RadarDetectionMatch.msg  RadarDetectionMatchArray.msg
src/point_matching/radar_detection_matcher/: CMakeLists.txt  package.xml
src/point_matching/radar_detection_matcher/launch/: radar_detection_matcher.launch.py
src/point_matching/radar_detection_matcher/radar_detection_matcher/: radar_detection_matcher.py  radar_detection_matcher_node.py
src/point_matching/radar_detection_matcher/test/: test_params.py
src/point_matching/radar_image_projector/: CMakeLists.txt  package.xml
src/point_matching/radar_image_projector/launch/: radar_image_projector.launch.py
src/point_matching/radar_image_projector/param/: defaults.param.yaml  local_projector.param.yaml  nuscenes_projector.param.yaml
src/point_matching/radar_image_projector/radar_image_projector/: radar_image_projector.py  radar_image_projector_node.py
src/point_matching/radar_image_projector/test/: test_params.py
src/point_matching/scan_detection_matcher/: CMakeLists.txt  package.xml
src/scan_detection_matcher/launch/: scan_detection_matcher.launch.py
src/scan_detection_matcher/param/: defaults.param.yaml
src/scan_detection_matcher/scan_detection_matcher/: scan_detection_matcher.py  scan_detection_matcher_node.py
src/scan_detection_matcher/test/: test_params.py
src/street_obj_detector/: README.md  package.xml  setup.cfg  setup.py
src/street_obj_detector/street_obj_detector/: street_obj_detector.py  street_obj_detector_node.py
src/tools/radar_to_pointcloud2/: .gitignore  package.xml  setup.cfg  setup.py
src/visualization/radar_image_visualizer/: CMakeLists.txt  package.xml
(+8 files in other folders)
