<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_image_projector</name>
  <version>1.0.0</version>
  <description>projecting radar to image</description>
  <maintainer email="tomasz.a.kapron@gmail.com">tomaszkapron</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>ament_cmake_python</build_depend>

  <depend>launch_ros</depend>
  <depend>projected_radar_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
